[gd_scene load_steps=3 format=3 uid="uid://bkb1f51ydaji0"]

[ext_resource type="Script" uid="uid://chix1tbbe0omi" path="res://source/main.gd" id="1_kaxhg"]
[ext_resource type="FontFile" uid="uid://c2on4rplk6ncr" path="res://assets/fonts/pokemon-firered-leafgreen-font.otf" id="2_62cc7"]

[node name="Main" type="Node"]
script = ExtResource("1_kaxhg")
firered_default_config_path = "res://data/firered.cfg"
leafgreen_default_config_path = "res://data/leafgreen.cfg"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="MenuTitleLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_62cc7")
theme_override_font_sizes/font_size = 10
text = "Pok√©mon FireLeaf configuration menu"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChooseConfigurationLabel" type="Label" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_62cc7")
theme_override_font_sizes/font_size = 10
text = "Choose a configuration:"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
columns = 2

[node name="FireRedButton" type="Button" parent="Control/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_62cc7")
theme_override_font_sizes/font_size = 10
text = "FireRed (Default)"

[node name="LeafGreenButton" type="Button" parent="Control/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_62cc7")
theme_override_font_sizes/font_size = 10
text = "LeafGreen"

[node name="OpenFileDialogButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_62cc7")
theme_override_font_sizes/font_size = 10
text = "Choose in FileSystem"

[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/GridContainer/FireRedButton" to="." method="_on_fire_red_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/GridContainer/LeafGreenButton" to="." method="_on_leaf_green_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/OpenFileDialogButton" to="." method="_on_open_file_dialog_button_pressed"]
